Changes in openair 0.5-13 [2011-11-18]
=====================================

*       Major update to polarPlot allowing variables other than
	"ws" to be plotted with wind direction.

Changes in openair 0.5-12 [2011-11-14]
=====================================

*       do not clip polarPlot concentrations unless upper is supplied
*       new option 'intervals' for percentileRose
*       add min.bin option to polarAnnulus
*       add Index of Agreement to modStats
*       new averaging time "season" for timeAverage
*	better treatment of avg.time = "season" and type = "season" in
	TheilSen and smoothTrend
*	use bootstrap methods to calculate 95% confidence intervals in
        the mean for timeVariation
*	New option 'difference' in timeVariation to show difference
        between two variables with bootstrap 95% CI in the mean
*	Byte-compile package
*	Place key on right be default in scatterPlot to avoid clash
        with x or y axis labels.
*	Include all colour schemes defined in the RColorBrewer package

Changes in openair 0.5-11 [2011-09-14]
=====================================

*       update to corPlot, scatterPlot, smoothTrend, linearRelation,
        percentileRose, trajPlot, trajLevel, timeVariation, TaylorDiagram,
        timePlot, summaryPlot
        improved ... handling
*	remove warnings when importing air pollution data
*	additional update to corPlot
        added pollutant option, and openair class output
*	tweak scaling on percentileRose deal with negative data
*	change MannKendall to use TheilSen for all estimates for
        consistency. May slightly affect some p estimates.

Changes in openair 0.5-10 [2011-09-12]
=====================================

*       update to calendarPlot, kernelExceed,
        MannKendall and conditionalQuantile
        improved ... handling
*       minor update to GoogleMapsPlot

Changes in openair 0.5-9 [2011-09-08]
=====================================
