@@ -1,5 +1,22 @@
 citHeader("To cite package 'openair' in publications use:")
 
+citEntry(entry="Article",
+title = "openair --- An R package for air quality data analysis",
+author = "David C. Carslaw and Karl Ropkins",
+journal = "Environmental Modelling & Software",
+volume = "27--28",
+number = "0",
+pages = "52--61",
+year = "2012",
+note = "",
+issn = "1364-8152",
+doi = "10.1016/j.envsoft.2011.09.008",
+
+textVersion =
+         paste("Carslaw, D.C. and K. Ropkins, (2012)",
+               "openair --- an R package for air quality data analysis. ",
+               "Environmental Modelling & Software. Volume 27-28, 52-61."))
+
 citEntry(entry="Manual",
          title = "openair: Open-source tools for the analysis of air pollution data",
          author = personList(as.person("David Carslaw"),
